# MeetSkills

./: README.md  main.py  pyproject.toml
backend/: Procfile  manage.py
backend/accounts/: models.py  serializers.py
backend/accounts/migrations/: 0001_initial.py
backend/matching/: admin.py  models.py  serializers.py  urls.py  views.py
backend/matching/migrations/: 0001_initial.py
backend/meetskills/: asgi.py  settings.py  urls.py  wsgi.py
backend/messaging/: admin.py  models.py  serializers.py  urls.py  views.py
backend/messaging/migrations/: 0001_initial.py
frontend/: connexion.html  index.html  inscription.html  messagerie.html  profil.html  publication.html  recherche.html
frontend/css/: style.css
frontend/js/: api.js  index.js
