[project]
name = "meetskills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djoser>=2.3.3",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
]
